--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,89 @@
     <string name="invalid_password">Invalid Password</string>
     <string name="titl_beststudent">BEST STUDENTS</string>
     <string name="titl_topstudent">TOP STUDENTS</string>
+
+    //List Modules
+    <string-array name="lable_web_modules">
+        <item>WEB - FIRYAL</item>
+        <item>WEB - FIRYAL</item>
+        <item>WEB - FIRYAL</item>
+        <item>WEB - FIRYAL</item>
+        <item>WEB - FIRYAL</item>
+    </string-array>
+    <string-array name="category_web_modules">
+        <item>WEB</item>
+        <item>WEB</item>
+        <item>WEB</item>
+        <item>WEB</item>
+        <item>WEB</item>
+    </string-array>
+    <string-array name="date_web_modules">
+        <item>26 Aug</item>
+        <item>6 Sep</item>
+        <item>16 Sep</item>
+        <item>26 Sep</item>
+        <item>4 Oct</item>
+    </string-array>
+    <string-array name="title_web_modules">
+        <item>The Basics of Laravel 8</item>
+        <item>Advance Laravel</item>
+        <item>Building RESTful APIs in Laravel</item>
+        <item>Building Laravel and Vue.js Web Apps</item>
+        <item>Validation</item>
+    </string-array>
+    <string-array name="decription_web_modules">
+        <item>APIs serve as a bridge between different applications or systems, allowing us to efficiently share our data with the world. REST, an architectural style that defines how to build APIs, is popular, modern, and lightweight. /n
+            In this course, discover how to create a RESTful API of your own. Join instructor Zuzana Kunckova as she demonstrates how to build a RESTful API using Laravel, the popular PHP framework. /n
+            Learn how to set up your application, including how to create the database structure and set up RESTful API routes. Discover how to build your RESTful API and save, display, update, and delete resources Plus, explore how to use Postman to test your API and ensure that it works as expected.</item>
+        <item>Laravel is one of today most popular PHP frameworks for building elegant applications. In this course, learn how to get the most out of Laravel when working with controllers, routes, views, and the Eloquent ORM. /n
+            Instructor Justin Yost steps through how to build a new Laravel application, exploring a variety of features along the way that you can leverage to work smarter with the framework. /n
+            Get advanced tips for iterating a collection, working with the Blade templating engine, building middleware, and more.</item>
+        <item>APIs serve as a bridge between different applications or systems, allowing us to efficiently share our data with the world. REST, an architectural style that defines how to build APIs, is popular, modern, and lightweight. /n
+            In this course, discover how to create a RESTful API of your own. Join instructor Zuzana Kunckova as she demonstrates how to build a RESTful API using Laravel, the popular PHP framework. Learn how to set up your application, including how to create the database structure and set up RESTful API routes. /n
+            Discover how to build your RESTful API and save, display, update, and delete resources Plus, explore how to use Postman to test your API and ensure that it works as expected.</item>
+        <item>Vue.js ships with Laravel, the hugely popular PHP web framework. But using this front-end framework along with Laravel to build full-stack web applications comes with its own set of challenges. /n
+            In this project-based course, instructor Michael Sullivan steps through how to work with Vue.js and Laravel to create elegant, real-world apps. /n
+            As he shows how to build a content management tool for a restaurant menu, Michael demonstrates how to scaffold an authentication system, build an embedded SPA with Vue Router, manage state complexity using Vuex, and more.</item>
+        <item>Laravel is the most popular MVC framework for PHP. It builds on PHP standards and conventions, making it easy to create completely customizable, full-featured apps. /n
+            In this course—the second installment in the Laravel 6 Essential Training series, instructor Justin Yost continues to cover the essentials of working with Laravel 6 as he demonstrates how to build a basic Laravel application to manage a hotel reservation system. /n
+            Justin explains how to run console commands, add the ability to save images, work with the Laravel service container, write tests in Laravel, write and send emails using your app, and manage user authentication. These videos provide the information you need to make a move to Laravel and build high-quality, scalable, and sound PHP applications.</item>
+    </string-array>
+    <array name="image_web_modules">
+        <item>@drawable/img_weblist</item>
+        <item>@drawable/imgw2</item>
+        <item>@drawable/imgw3</item>
+        <item>@drawable/imgw4</item>
+        <item>@drawable/imgw5</item>
+    </array>
+
+    //List Task
+    <string-array name="category_task">
+        <item>WEB</item>
+        <item>UI/UX</item>
+        <item>MOBILE</item>
+        <item>DINIYAH</item>
+        <item>DNIYAH</item>
+    </string-array>
+    <string-array name="title_task">
+        <item>Build Database Library</item>
+        <item>Design Wireframe Login</item>
+        <item>Retrofit With Kotlin</item>
+        <item>Design Poster Al-Fatihah</item>
+        <item>Microblog Adab</item>
+    </string-array>
+    <string-array name="time_task">
+        <item>16 hours</item>
+        <item>1 days</item>
+        <item>2 days</item>
+        <item>Overdue</item>
+        <item>Overdue</item>
+    </string-array>
+    <array name="image_task">
+        <item>@drawable/img_weblist</item>
+        <item>@drawable/imgw2</item>
+        <item>@drawable/imgw3</item>
+        <item>@drawable/imgw4</item>
+        <item>@drawable/imgw5</item>
+    </array>
+
 </resources>
