--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="description">Description</string>
     <string name="your_project">Your Project :</string>
     <string name="like">LIKE</string>
-    <string name="appname">AweFun!</string>
+    <string name="appname">Dy-Fun!</string>
     <string name="assigment_task">ASSIGMENT TASK :</string>
     <string name="desc">Description :</string>
     <string name="error_task_cancelled">Task Canceled</string>
